# Fastapi-Celery-Demo

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  celeryconfig.py  consumer.py  main.py  producer.py  schemas.py  tasks.py
